[tool.poetry]
name = "paroxython"
version = "0.5.2"
description = "Search Python code for algorithmic features"
authors = ["Aristide Grange"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/laowantong/paroxython/"
keywords = ["education",
            "static-analysis",
            "algorithmic",
            "metaprogramming",
            "python",
            "taxonomic-classification",
            "knowledge-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Education",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
docopt = "^0.6.2"
python = "^3.6.1"
regex = "^2020.7.14"
typed-ast = "^1.4.1"
typing-extensions = "^3.7.4.3"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pdoc3 = "^0.9.1"
pre-commit = "^2.6.0"
pytest = "^6.0.1"
sqlparse = "^0.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/laowantong/paroxython/issues"

[tool.poetry.scripts]
paroxython = 'paroxython.cli:main'
