[tool.poetry]
name = "paroxython"
version = "0.7.0"
description = "Search Python code for algorithmic features"
authors = ["Aristide Grange"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/laowantong/paroxython/"
keywords = ["education",
            "static-analysis",
            "algorithmic",
            "metaprogramming",
            "python",
            "taxonomic-classification",
            "knowledge-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Education",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
docopt = "^0.6.2"
python = "^3.8"
regex = "^2022.8.17"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pdoc3 = "^0.9.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-icdiff = "^2.4.7"
sqlparse = "^0.4.2"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/laowantong/paroxython/issues"

[tool.poetry.scripts]
paroxython = 'paroxython.cli:main'
